# gamalan

./: .agent-config  .clippy.toml  .env.example  .gitignore  .prettierrc  AGENTS.md  BRAND_GUIDE.md  CI_CD_OPTIMIZATIONS.md  CI_CD_SETUP_README.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.test  Dockerfile.test-runner  IMPLEMENTATION_SUMMARY.md  Makefile  PRD.md  PRD_Original.md  PlanPack.md  README.md  RoadMap.md  SECURITY_CODE_REVIEW_REPORT.md  SIMPLE_SETUP.md  TASK_25bb306f_COMPLETION.md  TASK_4338af69_COMPLETION.md  TASK_49df80ce_COMPLETION.md  TASK_56eb3c8b_COMPLETION.md  TASK_7b97270b_COMPLETION.md  TASK_C7616BC3_IMPLEMENTATION_SUMMARY.md  TASK_c7616bc3_COMPLETION.md  TASK_d0a3442d_COMPLETION.md  TESTING.md  TESTING_UPDATE_SUMMARY.md  TEST_INFRASTRUCTURE_README.md  UserGuide.md  UserGuide_Updated.md  UserGuide_orig.md  User_Authentication_System_PRD.md  WIP_NOTES.md  cobertura.xml  (+15 more)
libs/auth_clerk/: Cargo.toml
libs/auth_clerk/src/: claims.rs  jwks.rs  lib.rs  organization.rs  webhook.rs
libs/auth_clerk/tests/: jwt_verifier_tests.rs  security_performance_tests.rs  webhook_tests.rs
libs/common/: Cargo.toml
libs/common/src/: error_context.rs  feature_flags.rs  lib.rs  observability.rs
services/api-gateway/: Cargo.toml  debug.sh
services/api-gateway/src/: auth.rs  lib.rs  main.rs  migrations.rs  test_main.rs
services/api-gateway/tests/contract/: mod.rs  test_task_analysis_contract.rs  test_unified_gateway_compliance.rs
services/api-gateway/tests/integration/: mod.rs  test_gateway.rs
services/auth-gateway/: Cargo.toml  README.md
services/auth-gateway/docs/: openapi.yaml
services/auth-gateway/migrations/: 20250921000001_add_user_roles_and_specialties.sql  20250921000002_create_teams_table.sql  20250921000003_create_sprints_table.sql  20250921000004_populate_default_data.sql
services/auth-gateway/src/: lib.rs  main.rs
services/auth-gateway/src/adapters/http/: handlers.rs  routes.rs
services/auth-gateway/src/adapters/persistence/: models.rs  repo.rs
services/auth-gateway/src/application/: ports.rs  usecases.rs
services/auth-gateway/src/domain/: mod.rs  organization.rs  sprint.rs  team.rs  user.rs
services/auth-gateway/src/domain/tests/: mod.rs  test_user.rs
services/backlog/: Cargo.toml  README.md
services/backlog/docs/: openapi.yaml
services/backlog/migrations/: 20250825120000_init.sql  20250825120000_initial_placeholder.sql  20250825120100_create_projects_table.sql  20250825120200_create_backlog_tables.sql  20250825120201_add_projects_columns.sql  20250827120500_add_acceptance_criteria_refs_to_tasks.sql  20250902090500_add_story_readiness_override.sql  20250918000001_add_organization_support.sql  20250921000001_enhance_stories_table.sql  20250921000002_enhance_tasks_table.sql  20250921000003_populate_default_data.sql
services/backlog/src/: lib.rs  main.rs
services/backlog/src/adapters/: mod.rs
services/backlog/src/adapters/http/: handlers.rs  mod.rs  routes.rs  state.rs
services/backlog/src/adapters/integrations/: mod.rs  readiness_client.rs
services/backlog/src/adapters/persistence/: models.rs  repo.rs
services/backlog/src/adapters/websocket/: mod.rs
services/backlog/src/application/: mod.rs  ports.rs  usecases.rs
services/backlog/src/domain/: events.rs  mod.rs  recommendation.rs  story.rs  task.rs
services/backlog/tests/: lib.rs
services/backlog/tests/common/: mod.rs
services/backlog/tests/contract/: mod.rs  test_openapi_compliance.rs
services/backlog/tests/integration/: mod.rs  test_concurrent_task_ownership.rs  test_http_handlers.rs  test_sprint_task_board.rs  test_story_management.rs  test_websocket_events.rs
services/backlog/tests/unit/domain/: mod.rs  test_readiness_override.rs  test_story.rs  test_story_domain.rs  test_task.rs
services/context-orchestrator/: Cargo.toml
services/context-orchestrator/docs/: openapi.yaml
services/context-orchestrator/src/: lib.rs  main.rs
services/context-orchestrator/src/adapters/: mod.rs
services/context-orchestrator/src/adapters/http/: handlers.rs
services/context-orchestrator/src/adapters/integrations/: mod.rs  openai_client.rs  service_clients.rs
services/context-orchestrator/src/adapters/persistence/: mod.rs  models.rs  postgres_repo.rs  qdrant_repo.rs
services/context-orchestrator/src/application/: mod.rs  ports.rs
services/context-orchestrator/src/application/use_cases/: act_use_case.rs  interpret_use_case.rs  mod.rs
services/context-orchestrator/src/domain/: action_validator.rs  candidate_selector.rs  context_entity.rs  intent_parser.rs  mod.rs
services/context-orchestrator/src/projections/: mod.rs
services/context-orchestrator/tests/: lib.rs  router_integration_test.rs
services/context-orchestrator/tests/integration/: interpret_test.rs  mod.rs  test_http_handlers.rs  test_ownership_workflow.rs
services/context-orchestrator/tests/unit/domain/: mod.rs  test_action_validator.rs  test_candidate_selector.rs  test_context_entity.rs
services/projects/: Cargo.toml  README.md
services/projects/docs/: openapi.yaml
services/projects/src/: lib.rs  main.rs
services/projects/src/adapters/http/: handlers.rs  routes.rs
services/projects/src/adapters/persistence/: models.rs  repo.rs
services/projects/src/application/: ports.rs  usecases.rs
services/projects/src/domain/: project.rs
services/projects/tests/unit/: test_handlers.rs
services/prompt-builder/: Cargo.toml  README.md
services/prompt-builder/docs/: openapi.yaml
services/prompt-builder/src/: lib.rs  main.rs
services/prompt-builder/src/adapters/http/: handlers.rs  routes.rs
services/prompt-builder/src/adapters/integrations/: mod.rs  (+3 more)
services/prompt-builder/src/application/: ports.rs  usecases.rs
services/prompt-builder/src/config/: mod.rs
services/prompt-builder/src/domain/: mod.rs  plan_pack.rs  task_pack.rs  task_pack_backup.rs
services/prompt-builder/src/projections/: mod.rs
services/sprint/: Cargo.toml  README.md
services/sprint/docs/: openapi.yaml
services/sprint/src/: domain.rs  lib.rs  main.rs
services/sprint/tests/: test_websocket_real_time_updates.rs
(+496 files in other folders)
