[workspace]
resolver = "2"
members = [
    "libs/common",
    "libs/auth_clerk",
    "services/auth-gateway",
    "services/projects",
    "services/backlog",
    "services/readiness",
    "services/prompt-builder",
    "services/context-orchestrator",
    "services/api-gateway",
    "services/sprint",
    "services/demo",
    "services/gh-integrator",
    "services/analytics",
    "services/coach",
]

[workspace.dependencies]
axum = "0.7.9"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
thiserror = "1.0.61"
anyhow = "1.0.86"
shuttle-runtime = "0.50.0"
shuttle-axum = "0.50.0"
shuttle-shared-db = { version = "0.50.0", features = ["postgres"] }
shuttle-qdrant = "0.50.0"
sqlx = { version = "0.8.2", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
async-trait = "0.1.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "fmt"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
serde_with = "3.11.0"
http-body-util = "0.1.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.4", features = ["json"] }