[workspace]
resolver = "2"
members = [
    "libs/common",
    "libs/auth_clerk",
    "services/auth-gateway",
    "services/projects",
    "services/backlog",
    "services/readiness",
    "services/prompt-builder",
    "services/context-orchestrator",
    "services/api-gateway",
    "services/sprint",
    "services/demo",
    "services/gh-integrator",
    "services/analytics",
    "services/coach",
]

[workspace.dependencies]
axum = "0.8.4"
serde = "1.0.225"
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "1.0.69"
anyhow = "1.0.99"
shuttle-runtime = "0.56.0"
shuttle-axum = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres"] }
shuttle-qdrant = "0.56.0"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls", "migrate"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
async-trait = "0.1.83"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json", "fmt"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
serde_with = "3.11.0"
http-body-util = "0.1.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.11", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }