[package]
name = "auth_clerk"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
chrono = "0.4.38"
axum-extra = { workspace = true }
tracing = { workspace = true }
ring = "0.17.8"
base64 = "0.22.1"
subtle = "2.5.0"
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
mockito = "1.4.0"
rsa = "0.9.6"
base64 = "0.22.1"