[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
utoipa = { workspace = true }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
