[package]
name = "backlog"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../libs/common" }
auth_clerk = { path = "../../libs/auth_clerk" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-shared-db = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12.4", features = ["json"] }

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = { workspace = true }
proptest = "1.4"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
