[package]
name = "context-orchestrator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "context-orchestrator"
path = "src/main.rs"

[dependencies]
# Workspace dependencies for core functionality
common = { path = "../../libs/common" }
auth_clerk = { path = "../../libs/auth_clerk" }

# Shuttle resources
shuttle-runtime = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-shared-db = { workspace = true }

# Core
axum = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }

# HTTP
tower-http = { workspace = true }
reqwest = { version = "0.12.4", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Async trait support
async-trait = { workspace = true }

# Vector database
qdrant-client = { version = "1.11.0", default-features = false, features = ["serde"] }

# LLM integration
async-openai = { version = "0.23.0" }

# Cryptography
sha2 = { version = "0.10.8" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tower = "0.4"
http-body-util = { workspace = true }
tokio-test = "0.4"