[package]
name = "prompt-builder"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../libs/common" }
auth_clerk = { path = "../../libs/auth_clerk" }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
shuttle-runtime = { workspace = true }
shuttle-axum = { workspace = true }
shuttle-shared-db = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
tower-http = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12.4", features = ["json"] }
chrono = { workspace = true }
tracing = { workspace = true }
event-bus = { path = "../../libs/event-bus" }
