[package]
name = "sprint"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
common = { path = "../../libs/common" }
tracing = { workspace = true }
